--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,8 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   cupertino_icons: ^1.0.2
+  dartz: ^0.10.0
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
