--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   dartz: ^0.10.0
   equatable: ^2.0.3
+  dio: ^4.0.0
 
 dev_dependencies:
   flutter_test:
