--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   equatable: ^2.0.3
   dio: ^4.0.0
   flutter_bloc: ^7.1.0
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
