--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   lint: ^1.5.3
+  mocktail: ^0.1.4
+  faker: ^2.0.0
+  bloc_test: ^8.1.0
 
 flutter:
   uses-material-design: true
